--- a/services/dy-2Dgraph/use-cases/cc-oned/cc_oned.ipynb
+++ b/services/dy-2Dgraph/use-cases/cc-oned/cc_oned.ipynb
@@ -3,19 +3,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": true
+       }
+      }
+     }
+    },
+    "hide_input": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"SIMCORE_CONFIG_PATH\"] = r\"C:\\Users\\anderegg\\Documents\\dev\\OSPARC\\osparc-simcore-ssh\\services\\dy-2Dgraph\\config\\cc_config-oned.json\"\n"
+    "import sys\n",
+    "os.environ[\"SIMCORE_CONFIG_PATH\"] = r\"C:\\Users\\anderegg\\Documents\\dev\\OSPARC\\osparc-simcore-ssh\\services\\dy-2Dgraph\\use-cases\\cc-oned\\cc_config-oned.json\"\n",
+    "sys.path.append(r'C:\\Users\\anderegg\\Documents\\dev\\OSPARC\\osparc-simcore-ssh\\packages\\simcore-sdk\\src')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "col": 0,
+        "height": 4,
+        "hidden": true,
+        "row": 0,
+        "width": 4
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
+    },
+    "hide_input": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
+    "# autorun: True\n",
     "import plotly.offline as offline\n",
     "import plotly.figure_factory as ff\n",
     "import plotly.graph_objs as go\n",
@@ -84,20 +123,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": true
+       }
+      }
+     }
+    },
+    "hide_input": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
-    "import simcoreapi\n",
-    "from simcoreapi import PORTS\n",
-    "\n"
+    "from simcore_sdk.nodeports import PORTS"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": true
+       }
+      }
+     }
+    },
+    "hide_input": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
+    "# autorun: True\n",
     "# from ECG_1D.m\n",
     "\n",
     "import pandas as pd\n",
@@ -115,9 +185,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": true
+       }
+      }
+     }
+    },
+    "hide_input": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
+    "# autorun: True\n",
     "import numpy as np\n",
     "from numpy import ndarray\n",
     "import pandas as pd\n",
@@ -190,21 +277,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "col": 0,
+        "height": 37,
+        "hidden": false,
+        "row": 0,
+        "width": null
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
+    },
+    "hide_input": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
+    "# autorun: True\n",
     "ap_surface_1D()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Initialization Cell",
+  "extensions": {
+   "jupyter_dashboards": {
+    "activeView": "grid_default",
+    "version": 1,
+    "views": {
+     "grid_default": {
+      "cellMargin": 10,
+      "defaultCellHeight": 20,
+      "maxColumns": 12,
+      "name": "grid",
+      "type": "grid"
+     },
+     "report_default": {
+      "name": "report",
+      "type": "report"
+     }
+    }
+   }
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -221,6 +342,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.5"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
