--- a/services/dy-2Dgraph/use-cases/cc-twod/cc_2d.ipynb
+++ b/services/dy-2Dgraph/use-cases/cc-twod/cc_2d.ipynb
@@ -3,31 +3,69 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ[\"SIMCORE_CONFIG_PATH\"] = r\"C:\\Users\\anderegg\\Documents\\dev\\OSPARC\\osparc-simcore-ssh\\services\\dy-2Dgraph\\config\\cc_config-twod.json\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "hide_input": true
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
-    "import simcoreapi\n",
-    "from simcoreapi import PORTS\n",
-    "\n"
+    "import os\n",
+    "import sys\n",
+    "os.environ[\"SIMCORE_CONFIG_PATH\"] = r\"C:\\Users\\anderegg\\Documents\\dev\\OSPARC\\osparc-simcore-ssh\\services\\dy-2Dgraph\\use-cases\\cc-twod\\cc_config-twod.json\"\n",
+    "sys.path.append(r'C:\\Users\\anderegg\\Documents\\dev\\OSPARC\\osparc-simcore-ssh\\packages\\simcore-sdk\\src')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": true
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true,
+    "init_cell": true
+   },
+   "outputs": [],
+   "source": [
+    "from simcore_sdk.nodeports import PORTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -45,7 +83,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": true
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -60,7 +110,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": true
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "col": 2,
+        "height": 21,
+        "hidden": false,
+        "row": 0,
+        "width": 7
+       },
+       "report_default": {}
+      }
+     }
+    },
+    "hide_input": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -105,6 +171,26 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Initialization Cell",
+  "extensions": {
+   "jupyter_dashboards": {
+    "activeView": "grid_default",
+    "version": 1,
+    "views": {
+     "grid_default": {
+      "cellMargin": 10,
+      "defaultCellHeight": 20,
+      "maxColumns": 12,
+      "name": "grid",
+      "type": "grid"
+     },
+     "report_default": {
+      "name": "report",
+      "type": "report"
+     }
+    }
+   }
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
