--- a/services/dy-2Dgraph/use-cases/cc-oned/cc_oned.ipynb
+++ b/services/dy-2Dgraph/use-cases/cc-oned/cc_oned.ipynb
@@ -23,9 +23,12 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "os.environ[\"SIMCORE_CONFIG_PATH\"] = r\"C:\\Users\\anderegg\\Documents\\dev\\OSPARC\\osparc-simcore-ssh\\services\\dy-2Dgraph\\use-cases\\cc-oned\\cc_config-oned.json\"\n",
-    "sys.path.append(r'C:\\Users\\anderegg\\Documents\\dev\\OSPARC\\osparc-simcore-ssh\\packages\\simcore-sdk\\src')"
+    "# devel\n",
+    "#import sys\n",
+    "#sys.path.append(r'C:\\Users\\anderegg\\Documents\\dev\\OSPARC\\osparc-simcore-ssh\\packages\\simcore-sdk\\src')\n",
+    "#os.environ[\"SIMCORE_CONFIG_PATH\"] = r\"C:\\Users\\anderegg\\Documents\\dev\\OSPARC\\osparc-simcore-ssh\\services\\dy-2Dgraph\\use-cases\\cc-oned\\cc_config-oned.json\"\n",
+    "# demo\n",
+    "os.environ[\"SIMCORE_CONFIG_PATH\"] = r\"/home/jovyan/config/cc_config-oned.json\""
    ]
   },
   {
