cleaned notebooks + fixed cc-2d use case

--- a/services/dy-2Dgraph/use-cases/cc/cc-single-cell/cc_single_cell.ipynb
+++ b/services/dy-2Dgraph/use-cases/cc/cc-single-cell/cc_single_cell.ipynb
@@ -20,13 +20,7 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "# devel\n",
-    "#import sys\n",
-    "#sys.path.append(r'C:\\Users\\anderegg\\Documents\\dev\\OSPARC\\osparc-simcore-ssh\\packages\\simcore-sdk\\src')\n",
-    "#os.environ[\"SIMCORE_CONFIG_PATH\"] = r\"C:\\Users\\anderegg\\Documents\\dev\\OSPARC\\osparc-simcore-ssh\\services\\dy-2Dgraph\\use-cases\\cc-oned\\cc_config-oned.json\"\n",
-    "# demo\n",
-    "os.environ[\"SIMCORE_CONFIG_PATH\"] = r\"/home/jovyan/config/cc_single_cell.json\"\n"
+    "import os"
    ]
   },
   {
