--- a/services/dy-2Dgraph/use-cases/cc/cc-twod/cc_2d.ipynb
+++ b/services/dy-2Dgraph/use-cases/cc/cc-twod/cc_2d.ipynb
@@ -20,35 +20,6 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "# devel\n",
-    "#import sys\n",
-    "#sys.path.append(r'C:\\Users\\anderegg\\Documents\\dev\\OSPARC\\osparc-simcore-ssh\\packages\\simcore-sdk\\src')\n",
-    "#os.environ[\"SIMCORE_CONFIG_PATH\"] = r\"C:\\Users\\anderegg\\Documents\\dev\\OSPARC\\osparc-simcore-ssh\\services\\dy-2Dgraph\\use-cases\\cc-oned\\cc_config-oned.json\"\n",
-    "# demo\n",
-    "os.environ[\"SIMCORE_CONFIG_PATH\"] = r\"/home/jovyan/config/cc_config-twod.json\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "extensions": {
-     "jupyter_dashboards": {
-      "version": 1,
-      "views": {
-       "grid_default": {
-        "hidden": true
-       },
-       "report_default": {}
-      }
-     }
-    },
-    "hide_input": true,
-    "init_cell": true
-   },
-   "outputs": [],
-   "source": [
     "from simcore_sdk.nodeports import PORTS"
    ]
   },
@@ -72,6 +43,8 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
+    "import tempfile\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation as animation\n",
@@ -106,7 +79,7 @@
     "\n",
     "# get the list of files\n",
     "dat_files = sorted([os.path.join(data_path, x) for x in os.listdir(data_path) if x.endswith(\".dat\")], key=lambda f: int(''.join(filter(str.isdigit, f))))\n",
-    "out_images_path = os.path.join(data_path, r\"tmp\")\n"
+    "out_images_path = tempfile.gettempdir()\n"
    ]
   },
   {
@@ -135,7 +108,7 @@
    "source": [
     "def plot_contour(i):\n",
     "    plt.clf()\n",
-    "    data_frame = pd.read_csv(dat_files[i], sep='\\t', header=None, usecols=range(0,number_of_columns))\n",
+    "    data_frame = pd.read_csv(dat_files[i], sep='\\t', header=None, usecols=range(0,number_of_columns), nrows=number_of_columns)\n",
     "    plt.contourf(data_frame.values, cmap=plt.get_cmap('jet'), levels=np.arange(-100.0, 51.0, 1.0))\n",
     "    plt.axis(\"off\")\n",
     "    plt.colorbar()\n",
