refactored swarm deployment docker-compose adapted makefile to create swarm and deploy @mguidon sidecar has an issue when on the swarm added notebook to initialise S3/DB for testing with cc-0d service

--- a/services/dy-2Dgraph/TestingDBConnectionwithSimcoreSDK.ipynb
+++ b/services/dy-2Dgraph/TestingDBConnectionwithSimcoreSDK.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Init"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"SIMCORE_NODE_UUID\"] = \"3a97f542-93c4-419c-b5c9-bcf9ff3ada7e\"\n",
-    "os.environ[\"PIPELINE_NODE_ID\"] = \"42\"\n",
+    "os.environ[\"SIMCORE_NODE_UUID\"] = \"12345555\"\n",
+    "os.environ[\"PIPELINE_NODE_ID\"] = \"1\"\n",
     "\n",
     "os.environ[\"POSTGRES_ENDPOINT\"] = \"localhost:5432\"\n",
     "os.environ[\"POSTGRES_USER\"] = \"simcore\"\n",
@@ -36,8 +43,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Use of nodeports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,6 +106,175 @@
    "outputs": [],
    "source": [
     "PORTS.outputs[\"out_1\"].set(\"Hey this still works or NOTTTTTT crazy shit man!!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set up database and S3 with some data from a configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "import tempfile\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import tenacity\n",
+    "from pathlib import Path\n",
+    "\n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy.orm import sessionmaker\n",
+    "\n",
+    "from simcore_sdk.models.pipeline_models import Base, ComputationalTask, ComputationalPipeline\n",
+    "from simcore_sdk.config.db import Config as db_config\n",
+    "\n",
+    "from simcore_sdk.config.s3 import Config as s3_config\n",
+    "from s3wrapper.s3_client import S3Client\n",
+    "\n",
+    "\n",
+    "class DbSettings(object):\n",
+    "    def __init__(self):\n",
+    "        self._db_config = db_config()\n",
+    "        self.db = create_engine(self._db_config.endpoint, client_encoding='utf8')\n",
+    "        self.Session = sessionmaker(self.db)\n",
+    "        self.session = self.Session()\n",
+    "\n",
+    "class S3Settings(object):\n",
+    "    def __init__(self):\n",
+    "        self._config = s3_config()\n",
+    "        self.client = S3Client(endpoint=self._config.endpoint,\n",
+    "            access_key=self._config.access_key, secret_key=self._config.secret_key)\n",
+    "        self.bucket = self._config.bucket_name\n",
+    "        self.client.create_bucket(self.bucket)\n",
+    "@tenacity.retry(wait=tenacity.wait_fixed(2), stop=tenacity.stop_after_attempt(5) | tenacity.stop_after_delay(20))\n",
+    "def init_db():\n",
+    "    db = DbSettings()    \n",
+    "    Base.metadata.create_all(db.db)\n",
+    "    return db\n",
+    "\n",
+    "@tenacity.retry(wait=tenacity.wait_fixed(2), stop=tenacity.stop_after_attempt(5) | tenacity.stop_after_delay(20))\n",
+    "def init_s3():\n",
+    "    s3 = S3Settings()\n",
+    "    return s3\n",
+    "db = init_db()\n",
+    "new_Pipeline = ComputationalPipeline()\n",
+    "db.session.add(new_Pipeline)\n",
+    "\n",
+    "db.session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_uuid = os.environ.get(\"SIMCORE_NODE_UUID\")\n",
+    "configuration={\n",
+    "    \"version\":\"0.1\",\n",
+    "    \"inputs\": [\n",
+    "        {\n",
+    "            \"key\": \"in_1\",\n",
+    "            \"label\": \"vm 1Hz\",\n",
+    "            \"desc\": \"these are computed data out of a pipeline\",\n",
+    "            \"type\": \"fileUrl\",\n",
+    "            \"value\": \"link.\" + node_uuid + \".in_1\",\n",
+    "            \"timestamp\": \"2018-05-23T15:34:53.511Z\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"key\": \"in_2\",\n",
+    "            \"label\": \"all results 1Hz\",\n",
+    "            \"desc\": \"computed data out of a pipeline\",\n",
+    "            \"type\": \"fileUrl\",\n",
+    "            \"value\": \"link.\" + node_uuid + \".in_2\",\n",
+    "            \"timestamp\": \"2018-05-23T15:34:53.511Z\"\n",
+    "        }\n",
+    "    ],\n",
+    "    \"outputs\": [        \n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "#configuration = json.loads(json_configuration)\n",
+    "new_Node = ComputationalTask(pipeline_id=new_Pipeline.pipeline_id, node_id=node_uuid, input=configuration[\"inputs\"], output=configuration[\"outputs\"])\n",
+    "db.session.add(new_Node)\n",
+    "db.session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:urllib3.connectionpool:Starting new HTTP connection (1): localhost\n",
+      "DEBUG:urllib3.connectionpool:http://localhost:9001 \"GET /simcore?location= HTTP/1.1\" 200 None\n",
+      "DEBUG:urllib3.connectionpool:http://localhost:9001 \"HEAD /simcore/ HTTP/1.1\" 200 0\n",
+      "DEBUG:urllib3.connectionpool:http://localhost:9001 \"POST /simcore/1/12345555/in_1?uploads= HTTP/1.1\" 200 None\n",
+      "DEBUG:urllib3.connectionpool:Starting new HTTP connection (2): localhost\n",
+      "DEBUG:urllib3.connectionpool:Starting new HTTP connection (3): localhost\n",
+      "DEBUG:urllib3.connectionpool:http://localhost:9001 \"PUT /simcore/1/12345555/in_1?partNumber=1&uploadId=5313e190-8a11-4b42-83d8-3812aca7d46b HTTP/1.1\" 200 0\n",
+      "DEBUG:urllib3.connectionpool:http://localhost:9001 \"PUT /simcore/1/12345555/in_1?partNumber=2&uploadId=5313e190-8a11-4b42-83d8-3812aca7d46b HTTP/1.1\" 200 0\n",
+      "DEBUG:urllib3.connectionpool:http://localhost:9001 \"PUT /simcore/1/12345555/in_1?partNumber=3&uploadId=5313e190-8a11-4b42-83d8-3812aca7d46b HTTP/1.1\" 200 0\n",
+      "DEBUG:urllib3.connectionpool:http://localhost:9001 \"PUT /simcore/1/12345555/in_1?partNumber=4&uploadId=5313e190-8a11-4b42-83d8-3812aca7d46b HTTP/1.1\" 200 0\n",
+      "DEBUG:urllib3.connectionpool:http://localhost:9001 \"POST /simcore/1/12345555/in_1?uploadId=5313e190-8a11-4b42-83d8-3812aca7d46b HTTP/1.1\" 200 None\n",
+      "DEBUG:urllib3.connectionpool:http://localhost:9001 \"POST /simcore/1/12345555/in_2?uploads= HTTP/1.1\" 200 None\n",
+      "DEBUG:urllib3.connectionpool:http://localhost:9001 \"PUT /simcore/1/12345555/in_2?partNumber=1&uploadId=b47596ce-db52-48f3-a7cb-5ac10697b8af HTTP/1.1\" 200 0\n",
+      "DEBUG:urllib3.connectionpool:http://localhost:9001 \"PUT /simcore/1/12345555/in_2?partNumber=2&uploadId=b47596ce-db52-48f3-a7cb-5ac10697b8af HTTP/1.1\" 200 0\n",
+      "DEBUG:urllib3.connectionpool:http://localhost:9001 \"PUT /simcore/1/12345555/in_2?partNumber=3&uploadId=b47596ce-db52-48f3-a7cb-5ac10697b8af HTTP/1.1\" 200 0\n",
+      "DEBUG:urllib3.connectionpool:http://localhost:9001 \"PUT /simcore/1/12345555/in_2?partNumber=4&uploadId=b47596ce-db52-48f3-a7cb-5ac10697b8af HTTP/1.1\" 200 0\n",
+      "DEBUG:urllib3.connectionpool:http://localhost:9001 \"POST /simcore/1/12345555/in_2?uploadId=b47596ce-db52-48f3-a7cb-5ac10697b8af HTTP/1.1\" 200 None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_dummy_table(number_of_rows, number_of_columns):\n",
+    "    time = np.arange(number_of_rows).reshape(number_of_rows,1)\n",
+    "    matrix = np.random.randn(number_of_rows, number_of_columns)\n",
+    "    fullmatrix = np.hstack((time, matrix))\n",
+    "    df = pd.DataFrame(fullmatrix)\n",
+    "    return df\n",
+    "\n",
+    "# create a dummy file filled with dummy data\n",
+    "temp_file = tempfile.NamedTemporaryFile()\n",
+    "temp_file.close()\n",
+    "\n",
+    "# create a dummy table\n",
+    "number_of_rows = 5000\n",
+    "number_of_columns = 200\n",
+    "number_of_files = 20\n",
+    "s3 = init_s3()\n",
+    "# push the file to the S3 for each input item\n",
+    "for input_item in configuration[\"inputs\"]:\n",
+    "    if input_item[\"type\"] == \"fileUrl\":\n",
+    "        df = create_dummy_table(number_of_rows, number_of_columns)\n",
+    "        # serialize to the file\n",
+    "        with open(temp_file.name, \"w\") as file_pointer:\n",
+    "            df.to_csv(path_or_buf=file_pointer, sep=\"\\t\", header=False, index=False)        \n",
+    "\n",
+    "        s3_object_name = Path(str(new_Pipeline.pipeline_id), node_uuid, input_item[\"key\"])\n",
+    "        s3.client.upload_file(s3.bucket, s3_object_name.as_posix(), temp_file.name)\n",
+    "    elif input_item[\"type\"] == \"folderUrl\":\n",
+    "        for i in range(number_of_files):\n",
+    "            df = create_dummy_table(number_of_rows, number_of_columns)\n",
+    "            # serialize to the file\n",
+    "            with open(temp_file.name, \"w\") as file_pointer:\n",
+    "                df.to_csv(path_or_buf=file_pointer, sep=\"\\t\", header=False, index=False)        \n",
+    "\n",
+    "            s3_object_name = Path(str(new_Pipeline.pipeline_id), node_uuid, input_item[\"key\"], str(i) + \".dat\")\n",
+    "            s3.client.upload_file(s3.bucket, s3_object_name.as_posix(), temp_file.name)\n",
+    "\n",
+    "Path(temp_file.name).unlink()"
    ]
   }
  ],
