fixed type names fixed initialisation of nodeports

--- a/services/dy-2Dgraph/use-cases/cc/cc-oned/cc_oned.ipynb
+++ b/services/dy-2Dgraph/use-cases/cc/cc-oned/cc_oned.ipynb
@@ -114,7 +114,7 @@
    },
    "outputs": [],
    "source": [
-    "from simcore_sdk.nodeports import PORTS"
+    "from simcore_sdk.nodeports.nodeports import PORTS"
    ]
   },
   {
