--- a/services/dy-2Dgraph/use-cases/cc/cc-single-cell/cc_single_cell.ipynb
+++ b/services/dy-2Dgraph/use-cases/cc/cc-single-cell/cc_single_cell.ipynb
@@ -123,7 +123,7 @@
    },
    "outputs": [],
    "source": [
-    "from simcore_sdk.nodeports import PORTS"
+    "from simcore_sdk.nodeports.nodeports import PORTS"
    ]
   },
   {
