--- a/services/dy-2Dgraph/use-cases/cc/cc-twod/cc_2d.ipynb
+++ b/services/dy-2Dgraph/use-cases/cc/cc-twod/cc_2d.ipynb
@@ -20,7 +20,7 @@
    },
    "outputs": [],
    "source": [
-    "from simcore_sdk.nodeports import PORTS"
+    "from simcore_sdk.nodeports.nodeports import PORTS"
    ]
   },
   {
