--- a/services/dy-2Dgraph/use-cases/cc/cc-oned/cc_oned.ipynb
+++ b/services/dy-2Dgraph/use-cases/cc/cc-oned/cc_oned.ipynb
@@ -10,7 +10,7 @@
    "outputs": [],
    "source": [
     "%%javascript\n",
-    "$('#menubar').toggle();"
+    "$('#menubar').hide();"
    ]
   },
   {
@@ -208,7 +208,7 @@
     "    num_cells = 165\n",
     "    # point ranges you want to plot\n",
     "    min = 0 #90000;\n",
-    "    max = 4 #100000;\n",
+    "    max = out_v.shape[0]-1 # 4 #100000;\n",
     "    diff = (max - min + 1)\n",
     "\n",
     "    \n",
