completed figure 1 with annotations

--- a/services/dy-2Dgraph/use-cases/kember/kember.ipynb
+++ b/services/dy-2Dgraph/use-cases/kember/kember.ipynb
@@ -64,10 +64,7 @@
     "                   5: {\"name\":\"direct parasympathetic efferent\", \"scale\":-1/0.0008}, \n",
     "                   6: {\"name\":\"recruitment = coefficient of variation\"}}\n",
     "data_path = PORTS.inputs[0].get()\n",
-    "#data_frame = pd.read_csv(data_path, sep=',', names=[column_name_map[i][\"name\"] for i in column_name_map.keys()])\n",
-    "columns_filters = range(7)\n",
     "outputController = pd.read_csv(data_path, sep=' ', header=None, skipinitialspace=True)\n",
-    "# add the column names to some values\n",
     "column_rename_dict = {}\n",
     "for i in column_name_map:\n",
     "    column_rename_dict[i] = column_name_map[i][\"name\"]\n",
@@ -142,46 +139,52 @@
    },
    "outputs": [],
    "source": [
-    "def create_graph(data_frame, title, x_axis_title, colors=None, lineWidths=None, show_legend=True, names=None):\n",
+    "import random\n",
+    "\n",
+    "def create_graph(data_frame, title, x_axis_title, colors=None, \n",
+    "                 lineWidths=None, show_legend=True, names=None, annotations=None, **kwargs):\n",
     "    if not names:\n",
     "        names = data_frame.columns\n",
     "    if not lineWidths:\n",
     "        lineWidths = [2] * (data_frame.columns.size-1)\n",
-    "    if colors:\n",
-    "        data = [        \n",
-    "            go.Scatter(\n",
-    "                x=data_frame[data_frame.columns[0]],\n",
-    "                y=data_frame[data_frame.columns[i]], \n",
-    "                opacity=0.5,                        \n",
-    "                name=names[i-1],\n",
-    "                marker=dict(\n",
-    "                    color=colors[i-1]\n",
+    "    if not colors:\n",
+    "        default_colors = [\"black\", \"red\", \"orange\",\"green\",\"blue\"]\n",
+    "        colors = [default_colors[random.randrange(0, len(default_colors))] for i in (data_frame.columns.size-1)]\n",
+    "        \n",
+    "    data = [        \n",
+    "        go.Scatter(\n",
+    "            x=data_frame[data_frame.columns[0]],\n",
+    "            y=data_frame[data_frame.columns[i]], \n",
+    "            opacity=0.8,                        \n",
+    "            name=names[i-1],\n",
+    "            marker=dict(\n",
+    "                color = colors[i-1]\n",
+    "            )\n",
+    "        ) for i in range(1,data_frame.columns.size)\n",
+    "    ]\n",
+    "    if annotations:\n",
+    "        data.extend(\n",
+    "            [go.Scatter(\n",
+    "                x=[note[\"text\"][\"x\"]],\n",
+    "                y=[note[\"text\"][\"y\"]],\n",
+    "                text=[note[\"text\"][\"value\"]],\n",
+    "                mode=\"text\",\n",
+    "                textfont=dict(\n",
+    "                    size=15,\n",
+    "                    color=note[\"text\"][\"color\"],\n",
     "                ),\n",
-    "                line = dict(\n",
-    "                    color = colors[i-1],\n",
-    "                    width = lineWidths[i-1],\n",
-    "                )\n",
-    "            ) for i in range(1,data_frame.columns.size)\n",
-    "        ]\n",
-    "    else:\n",
-    "        data = [        \n",
-    "            go.Scatter(\n",
-    "                x=data_frame[data_frame.columns[0]],\n",
-    "                y=data_frame[data_frame.columns[i]], \n",
-    "                opacity=0.5,                        \n",
-    "                name=names[i-1],\n",
-    "            ) for i in range(1,data_frame.columns.size)\n",
-    "        ]\n",
+    "                showlegend=False,\n",
+    "            ) for note in annotations if \"text\" in note]\n",
+    "        )\n",
     "\n",
     "    layout = go.Layout(\n",
     "        title=title, \n",
     "        showlegend=show_legend,\n",
     "        xaxis=dict(\n",
     "            title=x_axis_title\n",
-    "        ),\n",
-    "        yaxis=dict(\n",
-    "            #range=[0,.5]    \n",
-    "        ))\n",
+    "        ),        \n",
+    "        **kwargs\n",
+    "        )\n",
     "    fig = go.Figure(data=data, layout=layout)\n",
     "    offline.iplot(fig, config={\"displayModeBar\": False})"
    ]
@@ -190,7 +193,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hide_input": false
+    "hide_input": true
    },
    "outputs": [],
    "source": [
@@ -200,10 +203,40 @@
     "heart_rate_data[heart_rate_data.columns[3]] = heart_rate_data[heart_rate_data.columns[3]].apply(lambda x: x/0.0008)\n",
     "heart_rate_data[heart_rate_data.columns[4]] = heart_rate_data[heart_rate_data.columns[4]].apply(lambda x: x*-1.0/0.0008)\n",
     "colors = [\"magenta\", \"black\", \"red\", \"blue\"]\n",
+    "\n",
+    "dpos = 0.55\n",
+    "annotations = [\n",
+    "    {\"text\":{\"x\":2800, \"y\":0.05, \"value\":\"I<sub>1<sub>\", \"color\":\"red\"}},    \n",
+    "    {\"text\":{\"x\":6300, \"y\":0.05, \"value\":\"I<sub>2<sub>\", \"color\":\"red\"}},\n",
+    "    {\"text\":{\"x\":9800, \"y\":0.05, \"value\":\"I<sub>3<sub>\", \"color\":\"red\"}},\n",
+    "    {\"text\":{\"x\":4800, \"y\":dpos, \"value\":\"D<sub>1<sub>\", \"color\":\"black\"}},\n",
+    "    {\"text\":{\"x\":8300, \"y\":dpos, \"value\":\"D<sub>2<sub>\", \"color\":\"black\"}},\n",
+    "    {\"text\":{\"x\":11800, \"y\":dpos, \"value\":\"D<sub>3<sub>\", \"color\":\"black\"}},\n",
+    "    {\"text\":{\"x\":3800, \"y\":0.1, \"value\":\"R<sub>1<sub>\", \"color\":\"blue\"}},\n",
+    "    {\"text\":{\"x\":7300, \"y\":0.1, \"value\":\"R<sub>2<sub>\", \"color\":\"blue\"}},\n",
+    "    {\"text\":{\"x\":10800, \"y\":0.1, \"value\":\"R<sub>3<sub>\", \"color\":\"blue\"}},\n",
+    "]\n",
+    "\n",
+    "line_opacity = .5\n",
+    "shapes = [\n",
+    "    {\"type\":\"line\",\"x0\":2500,\"y0\":-.8,\"x1\":2500,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"red\",\"width\":1.5}},\n",
+    "    {\"type\":\"line\",\"x0\":6000,\"y0\":-.8,\"x1\":6000,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"red\",\"width\":1.5}},\n",
+    "    {\"type\":\"line\",\"x0\":9500,\"y0\":-.8,\"x1\":9500,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"red\",\"width\":1.5}},\n",
+    "    {\"type\":\"line\",\"x0\":4500,\"y0\":-.8,\"x1\":4500,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"black\",\"width\":1.5}},\n",
+    "    {\"type\":\"line\",\"x0\":8000,\"y0\":-.8,\"x1\":8000,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"black\",\"width\":1.5}},\n",
+    "    {\"type\":\"line\",\"x0\":11500,\"y0\":-.8,\"x1\":11500,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"black\",\"width\":1.5}},\n",
+    "    {\"type\":\"line\",\"x0\":3500,\"y0\":-.8,\"x1\":3500,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"blue\",\"width\":1.5}},\n",
+    "    {\"type\":\"line\",\"x0\":7000,\"y0\":-.8,\"x1\":7000,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"blue\",\"width\":1.5}},\n",
+    "    {\"type\":\"line\",\"x0\":10500,\"y0\":-.8,\"x1\":10500,\"y1\":.8,\"opacity\":line_opacity,\"line\":{\"color\":\"blue\",\"width\":1.5}},\n",
+    "]\n",
+    "\n",
     "create_graph(data_frame=heart_rate_data, \n",
     "             title=title, \n",
     "             colors=colors,\n",
-    "             x_axis_title=\"\\u03C4(sec)\")"
+    "             x_axis_title=\"\\u03C4(sec)\",\n",
+    "             annotations=annotations,\n",
+    "            yaxis=dict(range=[-0.4, 0.8]),\n",
+    "            shapes=shapes)"
    ]
   },
   {
